# Seminars

./: feed  feed.xml  index.html  pyproject.toml
data/: ingestion-future.py  ingestion.py
rss-generator/: AGENTS.md  pyproject.toml
rss-generator/src/rss_generator/: main.py
rss-generator/tests/: test_main.py
src/seminars/: __init__.py  cli.py  db.py  models.py  web.py
src/seminars/templates/: speakers.html
tests/: test_db.py  test_web.py
