[project]
name = "seminars"
version = "0.1.0"
description = "Internal tool for seminar management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pandas>=3.0.2",
]

[project.scripts]
seminars = "seminars.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "taskipy",
    "pandas-stubs>=2.3.3.251201",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest]
pythonpath = ["src"]

[tool.mypy]
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check . --fix"
check-formatting = "ruff format --check ."
check-linting = "ruff check --select I ."
check-typing = "mypy ."
all = "task format && task lint && task check-typing"
