[project]
name = "seminars"
version = "0.1.0"
description = "Internal tool for seminar management"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.116.0",
    "jinja2>=3.1.0",
    "pandas>=3.0.2",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35.0",
]

[project.scripts]
seminars = "seminars.cli:main"
seminars-web = "seminars.web:main"

[dependency-groups]
dev = [
    "ruff",
    "mypy",
    "taskipy",
    "pytest",
    "httpx>=0.28.0",
    "pandas-stubs>=2.3.3.251201",
]

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.pytest]
pythonpath = ["src"]

[tool.mypy]
exclude = ["build"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.taskipy.tasks]
format = "ruff format ."
lint = "ruff check . --fix"
check-formatting = "ruff format --check ."
check-linting = "ruff check --select I ."
check-typing = "mypy ."
test = "python -m pytest tests/"
all = "task format && task lint && task check-typing"
